tree-sitter-writeup/tree-sitter-procfile/corpus/base.txt
================================================================================
comment
================================================================================

# world funny

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
commands
================================================================================

hello: echo

--------------------------------------------------------------------------------

(program (instruction (id) (commands)))

================================================================================
comment + commands
================================================================================

# test
hello: echo
# fun

--------------------------------------------------------------------------------

(program
  (comment)
  (instruction (id) (commands))
  (comment))
